# stride_patternboost

./: .gitignore  Manifest.toml  Project.toml  README.md  constants.jl  decoder.py  fc_loop.py  local_search.jl  makebettertokens.py  makemoretokens.py  problem_4_cycle_free.jl  problem_narrow_admissible_tuples.jl  problem_permanent_avoid_123.jl  problem_sperner_saturated.jl  problem_triangle_free.jl  pyproject.toml  search.jl  search_fc.jl  slurm.py  test.jl  tokenizer.py  utils.py
no_spheres/: gw_loop.py  no_sphere_simple2.py
